--- a/Artonia_v2/templates/workshops/workshop_detail.html
+++ b/Artonia_v2/templates/workshops/workshop_detail.html
@@ -35,13 +35,16 @@
             <div class="workshop-buttons">
                 {% if is_creator %}
                     <a class="view-button" href="{% url 'workshop-edit' workshop.pk %}">Edit Workshop</a>
-                    <a class="view-button" href="{% url 'workshop-delete' workshop.pk %}">Delete Workshop</a>
-                {% endif %}
-                {% if request.user in workshop.participants.all %}
                     <a class="view-button" style="background-color: darkred"
-                       href="{% url 'workshop-cancel-register' workshop.pk %}">Cancel Registration</a>
+                       href="{% url 'workshop-delete' workshop.pk %}">Delete Workshop</a>
                 {% else %}
-                    <a class="view-button" href="{% url 'workshop-register' workshop.pk %}">Register Workshop</a>
+                    {% if request.user in workshop.participants.all %}
+                        <a class="view-button" style="background-color: darkred"
+                           href="{% url 'workshop-cancel-register' workshop.pk %}">Cancel Registration</a>
+                    {% else %}
+                        <a class="view-button" href="{% url 'workshop-register' workshop.pk %}">Register for the
+                            workshop</a>
+                    {% endif %}
                 {% endif %}
             </div>
         </div>
