--- a/Artonia_v2/templates/workshops/workshop_edit.html
+++ b/Artonia_v2/templates/workshops/workshop_edit.html
@@ -11,8 +11,8 @@
                     {% csrf_token %}
                     {{ form }}
                     <!-- form button -->
-                    <div class="workshop-form-buttons">
-                        <button type="submit">Edit</button>
+                    <div class="workshop-buttons">
+                        <button class="view-button" type="submit">Edit</button>
                         <button type="submit" class="view-button" style="background-color: darkred"><a
                                 href="{% url 'workshop-detail' workshop.pk %}" style="color: white">Cancel</a>
                         </button>
