CSS: Font changed

--- a/Artonia_v2/static/styles/workshop_details.css
+++ b/Artonia_v2/static/styles/workshop_details.css
@@ -40,6 +40,8 @@
 .workshop-current-details {
     list-style-type: none;
     padding-bottom: 10px;
+    font-family: Tahoma, serif;
+    font-size-adjust: 0.75;
     margin: 20px;
     text-align: center;
     object-position: center;
