--- a/Artonia_v2/templates/index.html
+++ b/Artonia_v2/templates/index.html
@@ -6,7 +6,7 @@
         <!-- Home page -->
         <section id="home">
             <h1>
-                Amazing Handmade Products <br/>Choose the best idea!
+                Amazing Handmade Products <br/>Choose the best idea and show it to the world!
             </h1>
             <img  src="{% static 'images/Artonia Logo Colourful.jpg' %}" alt="home"/>
         </section>
