--- a/Artonia_v2/templates/artwork/public_artwork_list.html
+++ b/Artonia_v2/templates/artwork/public_artwork_list.html
@@ -58,6 +58,24 @@
                 </div>
             {% endfor %}
         {% endfor %}
-
     </div>
+    
+    {% if is_paginated %}
+        <div class="pagination">
+            {% if page_obj.has_previous %}
+                <a href="?page=1" class="pagination-link">&laquo; First</a>
+                <a href="?page={{ page_obj.previous_page_number }}" class="pagination-link">Previous</a>
+            {% endif %}
+
+            <span class="current-page">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+            </span>
+
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}" class="pagination-link">Next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}" class="pagination-link">Last &raquo;</a>
+            {% endif %}
+        </div>
+    {% endif %}
+    
 {% endblock %}
