--- a/Artonia_v2/templates/registration/details-account.html
+++ b/Artonia_v2/templates/registration/details-account.html
@@ -2,9 +2,8 @@
 {% load static %}
 
 {% block content %}
-    <main>
-        <!-- Profile Details Section -->
 
+    <main>
         <section>
             <div class="workshop-form-card">
                 <h2 class="workshop-form-header">Profile Details</h2>
@@ -26,6 +25,7 @@
                             src="https://t.ly/XISsv"
                     />
                 {% endif %}
+
                 <!-- User's full name -->
                 <p>Full Name: {{ user.first_name }} {{ user.last_name }}</p>
                 <p>Username: {{ user.username }}</p>
@@ -33,23 +33,20 @@
                 <div>
                     <div>
                         {% if user.description %}
-                            <p>
-                                Description: <span>{{ user.description }}</span>
-                            </p>
+                            <p>Description: <span>{{ user.description }}</span></p>
                         {% endif %}
-                        <p>
-                            Last Login: <span>{{ user.last_login|date }}</span>
-                        </p>
+                        <p>Last Login: <span>{{ user.last_login|date }}</span></p>
                     </div>
-
                     <!--Edit and Delete buttons -->
                     <div class="workshop-form-buttons">
                         <a class="view-button" href="{% url 'user_edit' user.pk %}">Edit Profile</a>
                         <a class="view-button" href="{% url 'user_delete' user.pk %}">Delete Profile</a>
                     </div>
                 </div>
+
             </div>
         </section>
     </main>
+
 {% endblock %}
  
