--- a/Artonia_v2/templates/registration/edit-account.html
+++ b/Artonia_v2/templates/registration/edit-account.html
@@ -2,8 +2,6 @@
 
 {% block content %}
     <main>
-        <!-- Edit User's Profile Form -->
-
         <section>
             <div class="workshop-form-card">
                 <h2>Edit Profile</h2>
@@ -13,12 +11,15 @@
                     {{ form }}
                     <!-- form button -->
                     <div class="workshop-form-buttons">
-                        <button type="submit" style="text-decoration: none" href="{% url 'user_details' user.pk %}">Edit</button>
+                        <button type="submit" style="text-decoration: none" href="{% url 'user_details' user.pk %}">
+                            Edit
+                        </button>
                         <button type="submit" class="view-button" style="background-color: darkred"><a
                                 href="{% url 'user_details' request.user.pk %}" style="color: white">Cancel</a>
                         </button>
                     </div>
                 </form>
+
             </div>
         </section>
     </main>
